Revert "Release 1.13.0"